# cosy-camera-recorder

./: .dockerignore  Dockerfile  Makefile.am  NEWS  README.md  TODO  build.sh  configure.ac  dev-notes  run.sh
src/: .gitignore  Makefile  Makefile.am  ccr-gst-launch-record.sh  ccr-main.c  cfcr-gst-launch-record.sh  cfcr-gst-launch.sh  cfcr-main.c  cheese-widget-private.h  cosy-camera-recorder.c
src/libcheese/: Makefile.am  cheese-camera.c  cheese-camera.h  cheese-enums.c.template  cheese-enums.h.template
tests/: Makefile.am  test-request.c  zhelpers.h
